fixed footer overlap issue

--- a/misk/src/app/components/footer/footer.component.css
+++ b/misk/src/app/components/footer/footer.component.css
@@ -1,6 +1,10 @@
 .footer {
   margin: 1rem 5% 0;
-  padding: 1rem 0 3rem;
+  padding: 1rem 0 1rem;
+  position: relative;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 .footer-body {
