--- a/misk/src/app/components/signup/signup.component.css
+++ b/misk/src/app/components/signup/signup.component.css
@@ -1,5 +1,5 @@
 .form {
-  margin-bottom: 5rem;
+  margin-bottom: 10em;
 }
 
 .email {
@@ -10,7 +10,7 @@
 .email-wrapper {
   display: flex;
   flex-wrap: wrap;
-  padding-bottom: 2rem;
+  padding-bottom: 3rem;
 }
 
 .button {
